@startuml
title Diagnostic Node Class Diagram
package eros {
    class BaseNode
    class BaseNodeProcess
    namespace eros_diagnostic {
        class Diagnostic
    }
}
namespace eros_nodes {
    class DiagnosticNode #LimeGreen {
        -- Initialization Functions --
        +bool start()
        +eros_diagnostic::Diagnostic finish_initialization()

        -- Update Functions --
        +bool run_loop1();
        +bool run_loop2();
        +bool run_loop3();
        +bool run_001hz();
        +bool run_01hz();
        +bool run_01hz_noisy();
        +bool run_1hz();
        +bool run_10hz();
        +void thread_loop();

        -- Attribute Functions --
        +DiagnosticNodeProcess* get_process()

        -- Data Functions --

        -- Message Functions --
        +bool changenodestate_service(eros::srv_change_nodestate::Request& req,eros::srv_change_nodestate::Response& res)
        +system_commandAction_Callback(const eros::system_commandGoalConstPtr& goal)
        +bool system_diagnostics_service(eros::srv_get_diagnostics::Request& req,eros::srv_get_diagnostics::Response& res)
        +command_Callback(const eros::command::ConstPtr& t_msg);
        +diagnostic_Callback(const eros::diagnostic::ConstPtr& t_msg)

        -- Support Functions --
        +eros_diagnostic::Diagnostic rescan_nodes()

        -- Convert Functions --
        
        -- Printing Functions --
        +string pretty()

        -- Destructors --
        +cleanup()

        -- Printing Functions --

    }
    struct DiagnosticTypeAggregate #LimeGreen {
        +eros_diagnostic::Diagnostic worst_diag
        +string worst_diag_key
        +uint64_t update_count
        +map<string, eros_diagnostic::Diagnostic> diag_list
    }
    class DiagnosticNodeProcess #LimeGreen {
        -- Initialization Functions --
        +eros_diagnostic::Diagnostic finish_initialization()
        +reset()

        -- Update Functions --
        +eros_diagnostic::Diagnostic update(double t_dt, double t_ros_time)

        -- Attribute Functions --
        +eros_diagnostic::Diagnostic get_worst_diagnostic(eros_diagnostic::DiagnosticType type)

        -- Data Functions --

        -- Message Functions --
        +bool new_external_diagnostic(eros_diagnostic::Diagnostic diag)
        +eros_diagnostic::Diagnostic[] new_commandmsg(eros::command msg)

        -- Support Functions --
        +eros_diagnostic::Diagnostic[] check_programvariables()
        +eros_diagnostic::Diagnostic update_topiclist(string[] new_diagnostic_topics_to_subscribe)

        -- Convert Functions --
        
        -- Printing Functions --
        +string pretty()

        -- Destructors --
        +cleanup()
    }
    DiagnosticNodeProcess +-- DiagnosticTypeAggregate 

    BaseNode <|-- DiagnosticNode
    BaseNodeProcess <|-- DiagnosticNodeProcess
    DiagnosticNode -> DiagnosticNodeProcess 
}

@enduml
